--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -25,6 +25,13 @@
             android:layout_height="match_parent" />
     </LinearLayout>
 
+    <com.askey.dvr.cdr7010.setting.widget.VerticalProgressBar
+        android:id="@+id/vp_progress"
+        android:layout_margin="10dp"
+        android:layout_width="10dp"
+        android:layout_height="150dp"
+        android:layout_gravity="center_vertical" />
+
     <ImageView
         android:id="@+id/iv_icon"
         android:layout_width="70dp"
@@ -32,11 +39,5 @@
         android:layout_gravity="center_vertical"
         android:layout_margin="10dp"
         android:src="@drawable/ic_launcher_background" />
-
-    <com.askey.dvr.cdr7010.setting.widget.VerticalProgressBar
-        android:id="@+id/vp_progress"
-        android:layout_width="10dp"
-        android:layout_height="150dp"
-        android:layout_gravity="center_vertical" />
 
 </LinearLayout>
