--- a/app/src/main/res/layout/activity_range_setting.xml
+++ b/app/src/main/res/layout/activity_range_setting.xml
@@ -11,6 +11,19 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
+    <TextView
+        android:id="@+id/notify_msg"
+        android:layout_width="300dp"
+        android:layout_height="30dp"
+        android:layout_marginTop="20dp"
+        android:layout_gravity="center_horizontal"
+        android:background="@android:color/background_dark"
+        android:textColor="@android:color/background_light"
+        android:textSize="16sp"
+        android:gravity="center"
+        android:text="这里显示提示信息"
+        />
+
     <View
         android:id="@+id/line"
         android:layout_width="match_parent"
