--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -6,7 +6,9 @@
     <dimen name="progress_bar_height">150dp</dimen>
     <dimen name="brightness_width">20dp</dimen>
     <dimen name="brightness_margin">20dp</dimen>
+    <dimen name="date_time_margin">30dp</dimen>
 
     <dimen name="title_size">24sp</dimen>
     <dimen name="content_size">16sp</dimen>
+    <dimen name="time_size">30sp</dimen>
 </resources>
