--- a/app/src/main/res/layout/activity_device_install.xml
+++ b/app/src/main/res/layout/activity_device_install.xml
@@ -5,8 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
-    tools:context="com.askey.dvr.cdr7010.setting.module.dirving.ui.DrivingSetting">
-
+    tools:context="com.askey.dvr.cdr7010.setting.module.dirving.ui.DeviceInstallActivity">
     <LinearLayout
         android:layout_width="250dp"
         android:layout_height="match_parent"
@@ -18,7 +17,7 @@
             android:layout_height="wrap_content"
             android:background="@android:color/holo_blue_dark"
             android:padding="5dp"
-            android:text="@string/driving_support_setting"
+            android:text="@string/imapct_sensitivity"
             android:textColor="@android:color/background_light"
             android:textSize="24sp" />
 
@@ -33,5 +32,4 @@
         android:layout_width="10dp"
         android:layout_height="150dp"
         android:layout_gravity="center_vertical" />
-
 </LinearLayout>
