--- a/app/src/main/res/layout/activity_notification_setting.xml
+++ b/app/src/main/res/layout/activity_notification_setting.xml
@@ -1,16 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
-    tools:context="com.askey.dvr.cdr7010.setting.module.dirving.ui.SwitchActivity">
+    >
     <LinearLayout
         android:layout_width="250dp"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        >
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/tv_title"
@@ -18,7 +15,7 @@
             android:layout_height="wrap_content"
             android:background="@android:color/holo_blue_dark"
             android:padding="5dp"
-            android:text="@string/audio_setting"
+            android:text="@string/driving_support_setting"
             android:textColor="@android:color/background_light"
             android:textSize="24sp"
             android:ellipsize="marquee"
