--- a/app/src/main/res/drawable/menu_focus_item_bg.xml
+++ b/app/src/main/res/drawable/menu_focus_item_bg.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_selected="false">
         <shape android:shape="rectangle">
-            <solid android:color="@android:color/holo_blue_dark"/>
+            <solid android:color="@android:color/transparent"/>
             <size android:width="180dp" android:height="28dp"/>
         </shape>
     </item>
