--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -1,43 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal">
+    android:background="@drawable/bg_menu_main">
+
+    <ImageView
+        android:id="@+id/title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/title_menu_main" />
 
     <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/tv_title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@android:color/holo_blue_dark"
-            android:padding="5dp"
-            android:text="@string/tv_menu"
-            android:textColor="@android:color/background_light"
-            android:textSize="24sp" />
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/title"
+        android:orientation="horizontal">
 
         <ListView
             android:id="@+id/list_view"
             android:layout_width="180dp"
-            android:layout_height="match_parent" />
+            android:layout_height="140dp" />
+
+        <com.askey.dvr.cdr7010.setting.widget.VerticalProgressBar
+            android:id="@+id/vp_progress"
+            android:layout_width="10dp"
+            android:layout_height="130dp"
+            android:layout_marginLeft="10dp"
+            android:layout_gravity="center_vertical" />
+
+        <ImageView
+            android:id="@+id/iv_icon"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_gravity="center_vertical"
+            android:layout_margin="10dp"
+            android:src="@drawable/ic_launcher_background" />
     </LinearLayout>
 
-    <com.askey.dvr.cdr7010.setting.widget.VerticalProgressBar
-        android:id="@+id/vp_progress"
-        android:layout_margin="10dp"
-        android:layout_width="10dp"
-        android:layout_height="150dp"
-        android:layout_gravity="center_vertical" />
+    <include
+        layout="@layout/left_button_layout"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_alignParentEnd="true" />
 
-    <ImageView
-        android:id="@+id/iv_icon"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:layout_gravity="center_vertical"
-        android:layout_margin="10dp"
-        android:src="@drawable/ic_launcher_background" />
-
-</LinearLayout>
+    <include
+        layout="@layout/bottom_button_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true" />
+</RelativeLayout>
