--- a/app/src/main/res/layout/menu_list_item.xml
+++ b/app/src/main/res/layout/menu_list_item.xml
@@ -8,6 +8,7 @@
         android:id="@+id/list_item"
         android:layout_width="180dp"
         android:layout_height="27dp"
+        android:paddingLeft="15dp"
         android:background="@drawable/menu_focus_item_bg"
         android:ellipsize="marquee"
         android:focusableInTouchMode="true"
