--- a/app/src/main/res/layout/second_menu_layout.xml
+++ b/app/src/main/res/layout/second_menu_layout.xml
@@ -10,7 +10,7 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/tv_title"
+            android:id="@+id/second_menu_title"
             android:layout_width="250dp"
             android:layout_height="wrap_content"
             android:background="@android:color/holo_blue_dark"
