复用二级菜单公共类,删除无用文件及代码

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -93,7 +93,7 @@
     </string-array>
 
     <string-array name="system_setting">
-        <item>Date Time</item>
+        <item>Date/Time</item>
         <item>Notification sound volume</item>
         <item>Playback volume</item>
         <item>LCD Brightness</item>
