--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -8,7 +8,12 @@
     <dimen name="brightness_margin">20dp</dimen>
     <dimen name="date_time_margin">30dp</dimen>
 
+    <dimen name="leveler_detail_title_margin_top">10dp</dimen>
+    <dimen name="title_margin_top">30dp</dimen>
+    <dimen name="view_margin_top">10dp</dimen>
+
     <dimen name="title_size">24sp</dimen>
     <dimen name="content_size">16sp</dimen>
     <dimen name="time_size">30sp</dimen>
+
 </resources>
