--- a/app/src/main/res/layout/activity_system_info_detail.xml
+++ b/app/src/main/res/layout/activity_system_info_detail.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@id/bottom"
-        android:layout_toStartOf="@id/left"
+        android:layout_toStartOf="@id/right"
         android:layout_below="@id/title"
         android:paddingStart="5dp"
         >
@@ -125,8 +125,8 @@
     </ScrollView>
 
     <include
-        android:id="@+id/left"
-        layout="@layout/left_button_layout"
+        android:id="@+id/right"
+        layout="@layout/right_button_layout"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_alignParentEnd="true" />
