--- a/app/src/main/res/layout/right_button_layout.xml
+++ b/app/src/main/res/layout/right_button_layout.xml
@@ -3,7 +3,9 @@
     android:layout_width="wrap_content"
     android:layout_height="match_parent"
     android:gravity="center_vertical"
-    android:background="@android:color/transparent">
+    android:background="@android:color/transparent"
+    android:id="@+id/right"
+    >
 
     <LinearLayout
         android:layout_width="wrap_content"
