--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -19,7 +19,7 @@
         <ListView
             android:id="@+id/list_view"
             android:layout_width="180dp"
-            android:layout_height="140dp" />
+            android:layout_height="wrap_content" />
 
         <com.askey.dvr.cdr7010.setting.widget.VerticalProgressBar
             android:id="@+id/vp_progress"
