--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -15,5 +15,6 @@
     <dimen name="title_size">24sp</dimen>
     <dimen name="content_size">16sp</dimen>
     <dimen name="time_size">30sp</dimen>
+    <dimen name="gps_status_title_top">20dip</dimen>
 
 </resources>
