增加Communication Setting 结构框架

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -180,4 +180,11 @@
         <attr name="back_imageview" format="reference"/>
         <attr name="back_visible" format="boolean"/>
     </declare-styleable>
+
+    <string-array name="communication">
+        <item>Emergency Contact Person</item>
+        <item>Emergency Automatic Notification</item>
+    </string-array>
+
+
 </resources>
