增加Emergency Automatic Notification 默认值ON的设置

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -187,4 +187,11 @@
     </string-array>
 
 
+    <string-array name="emergency_automatic_notification">
+        <item>ON</item>
+        <item>OFF</item>
+    </string-array>
+
+
+
 </resources>
