--- a/app/src/main/res/layout/second_menu_layout.xml
+++ b/app/src/main/res/layout/second_menu_layout.xml
@@ -9,20 +9,21 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/second_menu_title"
-            android:layout_width="250dp"
-            android:layout_height="wrap_content"
-            android:background="@android:color/holo_blue_dark"
-            android:padding="5dp"
-            android:text="@string/movie_record_setting"
-            android:textColor="@android:color/background_light"
-            android:textSize="24sp" />
+        <include layout="@layout/title_layout"/>
+        <!--<TextView-->
+            <!--android:id="@+id/second_menu_title"-->
+            <!--android:layout_width="250dp"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:background="@android:color/holo_blue_dark"-->
+            <!--android:padding="5dp"-->
+            <!--android:text="@string/movie_record_setting"-->
+            <!--android:textColor="@android:color/background_light"-->
+            <!--android:textSize="24sp" />-->
 
         <ListView
             android:id="@+id/list_view"
             android:layout_width="250dp"
-            android:layout_height="match_parent" />
+            android:layout_height="wrap_content" />
     </LinearLayout>
 
     <com.askey.dvr.cdr7010.setting.widget.VerticalProgressBar
