--- a/app/src/main/res/layout/title_layout.xml
+++ b/app/src/main/res/layout/title_layout.xml
@@ -17,10 +17,10 @@
         android:id="@+id/title_tv"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:gravity="center"
+        android:gravity="center_vertical"
         android:layout_marginStart="10dp"
         android:textColor="@android:color/background_light"
-        android:textSize="16sp"
+        android:textSize="14sp"
         android:text="title"
         />
 
