--- a/app/src/main/res/layout/activity_system_installation_leveler.xml
+++ b/app/src/main/res/layout/activity_system_installation_leveler.xml
@@ -3,6 +3,11 @@
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <SurfaceView
+        android:id="@+id/preview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
     <com.askey.dvr.cdr7010.setting.module.system.ui.leveler.SpiritView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
