修改设置向导流程

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -192,6 +192,12 @@
         <item>OFF</item>
     </string-array>
 
+    <string-array name="mounting_position">
+        <item>Left</item>
+        <item>Middle</item>
+        <item>Right</item>
+    </string-array>
+
 
 
 </resources>
