--- a/app/src/main/res/layout/activity_system_installation_leveler.xml
+++ b/app/src/main/res/layout/activity_system_installation_leveler.xml
@@ -11,6 +11,7 @@
     <com.askey.dvr.cdr7010.setting.module.system.ui.leveler.SpiritView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/color_00ffffff"
         android:id="@+id/show"/>
 
     <TextView
@@ -19,8 +20,14 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
+        android:paddingLeft="@dimen/view_pading_left"
+        android:paddingRight="@dimen/view_pading_left"
+        android:paddingTop="@dimen/view_pading_top"
+        android:paddingBottom="@dimen/view_pading_top"
         android:layout_marginTop="@dimen/leveler_detail_title_margin_top"
+        android:background="@color/text_color"
         android:text="@string/leveler_detail_title"
+        android:textColor="@color/white"
         android:textSize="@dimen/time_size" />
 
     <include
