--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,7 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="text_color">#666666</color>
+    <color name="white">#ffffff</color>
+    <color name="color_66cc66">#3366cc66</color>
+    <color name="color_00ffffff">#00ffffff</color>
 </resources>
