--- a/app/src/main/res/layout/activity_sdcard_init.xml
+++ b/app/src/main/res/layout/activity_sdcard_init.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/bg_menu_main">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -14,7 +15,8 @@
             android:id="@+id/sdcard_init_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/sdcard_init_prompt" />
+            android:text="@string/sdcard_init_prompt"
+            android:textColor="@color/white"/>
 
         <ProgressBar
             android:id="@+id/sdcard_init_progress"
@@ -37,6 +39,7 @@
                 android:nextFocusRight="@id/sdcard_init_ok_bt"
                 android:backgroundTint="@drawable/sdcard_button_background"
                 android:text="@string/sdcard_init_cancel"
+                android:background="@color/colorPrimary"
                 android:textColor="@color/textcolor_select" />
             <Button
                 android:id="@+id/sdcard_init_ok_bt"
@@ -46,6 +49,7 @@
                 android:nextFocusRight="@id/sdcard_init_cancel_bt"
                 android:backgroundTint="@drawable/sdcard_button_background"
                 android:textColor="@color/textcolor_select"
+                android:background="@color/colorPrimary"
                 android:text="@string/sdcard_init_ok" />
 
         </LinearLayout>
