--- a/app/src/main/res/layout/activity_system_installation_satellite.xml
+++ b/app/src/main/res/layout/activity_system_installation_satellite.xml
@@ -3,6 +3,7 @@
     android:id="@+id/gps_status_title"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/bg_menu_main"
     android:layout_weight="1">
 
 
@@ -13,6 +14,7 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="@dimen/gps_status_title_top"
+        android:textColor="@color/white"
         android:text="@string/gps_status_title" />
 
 
