--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="white">#ffffff</color>
     <color name="color_66cc66">#3366cc66</color>
     <color name="color_00ffffff">#00ffffff</color>
+    <color name="color_ffff33">#ffff33</color>
 </resources>
