--- a/app/src/main/res/layout/activity_audio_record.xml
+++ b/app/src/main/res/layout/activity_audio_record.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
+    android:background="@drawable/bg_menu_main"
     tools:context="com.askey.dvr.cdr7010.setting.module.movie.ui.AudioRecordActivity">
 
     <LinearLayout
