--- a/app/src/main/res/layout/activity_manual_date_time_settings.xml
+++ b/app/src/main/res/layout/activity_manual_date_time_settings.xml
@@ -2,13 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/bg_menu_main"
     android:orientation="vertical">
 
     <TextView
         android:id="@+id/tv_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@android:color/holo_blue_dark"
         android:padding="5dp"
         android:text="@string/tv_date_time_setting"
         android:textColor="@android:color/background_light"
@@ -17,7 +17,6 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@android:color/holo_blue_dark"
         android:orientation="horizontal">
 
         <RelativeLayout
@@ -62,8 +61,8 @@
                 android:layout_below="@id/tv_year"
                 android:layout_marginLeft="@dimen/date_time_margin"
                 android:layout_marginTop="10dp"
-                android:visibility="invisible"
-                android:background="@drawable/current_line" />
+                android:background="@drawable/current_line"
+                android:visibility="invisible" />
 
             <TextView
                 android:id="@+id/tv_month"
@@ -93,8 +92,8 @@
                 android:layout_below="@id/tv_year"
                 android:layout_marginTop="10dp"
                 android:layout_toRightOf="@id/tv_year_separate"
-                android:visibility="invisible"
-                android:background="@drawable/current_line" />
+                android:background="@drawable/current_line"
+                android:visibility="invisible" />
 
             <TextView
                 android:id="@+id/tv_day"
@@ -113,8 +112,8 @@
                 android:layout_below="@id/tv_day"
                 android:layout_marginTop="10dp"
                 android:layout_toRightOf="@id/tv_month_separate"
-                android:visibility="invisible"
-                android:background="@drawable/current_line" />
+                android:background="@drawable/current_line"
+                android:visibility="invisible" />
         </RelativeLayout>
 
         <RelativeLayout
@@ -159,8 +158,8 @@
                 android:layout_below="@id/tv_hour"
                 android:layout_marginLeft="@dimen/date_time_margin"
                 android:layout_marginTop="10dp"
-                android:visibility="invisible"
-                android:background="@drawable/current_line" />
+                android:background="@drawable/current_line"
+                android:visibility="invisible" />
 
             <TextView
                 android:id="@+id/tv_minutes"
@@ -190,8 +189,8 @@
                 android:layout_below="@id/tv_minutes"
                 android:layout_marginTop="10dp"
                 android:layout_toRightOf="@id/tv_hour_separate"
-                android:visibility="invisible"
-                android:background="@drawable/current_line" />
+                android:background="@drawable/current_line"
+                android:visibility="invisible" />
 
             <TextView
                 android:id="@+id/tv_seconds"
@@ -210,8 +209,8 @@
                 android:layout_below="@id/tv_seconds"
                 android:layout_marginTop="10dp"
                 android:layout_toRightOf="@id/tv_minutes_separate"
-                android:visibility="invisible"
-                android:background="@drawable/current_line" />
+                android:background="@drawable/current_line"
+                android:visibility="invisible" />
         </RelativeLayout>
     </LinearLayout>
 </LinearLayout>
