--- a/app/src/main/res/layout/activity_playback_sound_setting.xml
+++ b/app/src/main/res/layout/activity_playback_sound_setting.xml
@@ -3,7 +3,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="20dp">
+    android:background="@drawable/bg_menu_main">
 
     <ImageView
         android:id="@+id/iv_playBackSound0"
