--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -198,6 +198,11 @@
         <item>Right</item>
     </string-array>
 
+    <string-array name="service_information">
+        <item>Weather Report</item>
+        <item>Service Information Notified</item>
+        <item>Help</item>
+    </string-array>
 
 
 </resources>
