--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -149,7 +149,7 @@
 
     <string-array name="notify_sound_guidance">
         <item>Reverse run detection</item>
-        <item>Speed ​​regulation area</item>
+        <item>Speed regulation area</item>
         <item>Pause</item>
         <item>Accident frequently occurring area</item>
         <item>Driving time</item>
