--- a/app/src/main/res/layout/title_layout.xml
+++ b/app/src/main/res/layout/title_layout.xml
@@ -10,7 +10,7 @@
         android:id="@+id/title_icon"
         android:layout_width="30dp"
         android:layout_height="20dp"
-        android:src="@mipmap/ic_launcher"
+        android:src="@drawable/icon_menu_sub_setting"
         />
 
     <TextView
