--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -19,13 +19,13 @@
 
         <ListView
             android:id="@+id/list_view"
-            android:layout_width="180dp"
+            android:layout_width="190dp"
             android:layout_height="wrap_content" />
 
         <com.askey.dvr.cdr7010.setting.widget.VerticalProgressBar
             android:id="@+id/vp_progress"
             android:layout_width="6dp"
-            android:layout_height="130dp"
+            android:layout_height="175dp"
             android:layout_marginLeft="10dp"
             android:layout_gravity="center_vertical" />
 
@@ -61,7 +61,7 @@
         android:singleLine="true"
         android:ellipsize="marquee"
         android:marqueeRepeatLimit="marquee_forever"
-        android:textColor="@android:color/background_light"
+        android:textColor="@android:color/holo_blue_light"
         android:textSize="16sp"
         android:text="this is item's detail discrible"
         />
