--- a/app/src/main/res/layout/menu_list_item.xml
+++ b/app/src/main/res/layout/menu_list_item.xml
@@ -7,7 +7,7 @@
     <TextView
         android:id="@+id/list_item"
         android:layout_width="180dp"
-        android:layout_height="26dp"
+        android:layout_height="29dp"
         android:paddingLeft="15dp"
         android:background="@drawable/menu_focus_item_bg"
         android:ellipsize="marquee"
@@ -16,6 +16,6 @@
         android:marqueeRepeatLimit="marquee_forever"
         android:singleLine="true"
         android:text="item"
-        android:textColor="@color/textcolor_select"
+        android:textColor="@android:color/background_light"
         android:textSize="16sp" />
 </LinearLayout>
