--- a/app/src/main/res/layout/second_menu_layout.xml
+++ b/app/src/main/res/layout/second_menu_layout.xml
@@ -2,33 +2,24 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal"
-    >
-    <LinearLayout
-        android:layout_width="250dp"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+    android:orientation="vertical">
 
-        <include layout="@layout/title_layout"/>
-        <!--<TextView-->
-            <!--android:id="@+id/second_menu_title"-->
-            <!--android:layout_width="250dp"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:background="@android:color/holo_blue_dark"-->
-            <!--android:padding="5dp"-->
-            <!--android:text="@string/movie_record_setting"-->
-            <!--android:textColor="@android:color/background_light"-->
-            <!--android:textSize="24sp" />-->
+    <include layout="@layout/title_layout" />
+
+    <LinearLayout
+        android:layout_width="256dp"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
 
         <ListView
             android:id="@+id/list_view"
             android:layout_width="250dp"
             android:layout_height="wrap_content" />
+
+        <com.askey.dvr.cdr7010.setting.widget.VerticalProgressBar
+            android:id="@+id/vp_progress"
+            android:layout_width="6dp"
+            android:layout_height="175dp" />
     </LinearLayout>
 
-    <com.askey.dvr.cdr7010.setting.widget.VerticalProgressBar
-        android:id="@+id/vp_progress"
-        android:layout_width="6dp"
-        android:layout_height="150dp"
-        android:layout_gravity="center_vertical" />
 </LinearLayout>
