统一Driving Support Function Setting和Notification Sound Guidance子选项中的UI

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -197,6 +197,11 @@
         <item>Right</item>
     </string-array>
 
+    <string-array name="swithch">
+        <item>ON</item>
+        <item>OFF</item>
+    </string-array>
+
     <string-array name="service_information">
         <item>Weather Report</item>
         <item>Service Information Notified</item>
