--- a/app/src/main/res/layout/activity_system_installation_satellite.xml
+++ b/app/src/main/res/layout/activity_system_installation_satellite.xml
@@ -6,16 +6,7 @@
     android:background="@drawable/bg_menu_main"
     android:layout_weight="1">
 
-
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="@dimen/gps_status_title_top"
-        android:textColor="@color/white"
-        android:text="@string/gps_status_title" />
+    <include layout="@layout/title_layout" />
 
 
     <com.askey.dvr.cdr7010.setting.view.HorizontalListView
