修复进入第一个界面崩溃的问题

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -204,5 +204,7 @@
         <item>Help</item>
     </string-array>
 
-
+    <string-array name="user_list">
+        <item>user_1</item>
+    </string-array>
 </resources>
