--- a/app/src/main/res/values-en/arrays.xml
+++ b/app/src/main/res/values-en/arrays.xml
@@ -204,5 +204,9 @@
         <item>Help</item>
     </string-array>
 
+    <string-array name="user_list">
+        <item>user_1</item>
+    </string-array>
+
 
 </resources>
