--- a/app/src/main/res/layout/activity_leveler_detail.xml
+++ b/app/src/main/res/layout/activity_leveler_detail.xml
@@ -8,47 +8,42 @@
     android:background="@drawable/bg_menu_main"
     android:orientation="vertical">
 
-    <TextView
+    <include
         android:id="@+id/leveler_detail_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="@dimen/title_margin_top"
-        android:textColor="@color/white"
-        android:text="@string/leveler_detail_title"
-        android:textSize="@dimen/time_size" />
-
+        layout="@layout/title_layout" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/leveler_detail_title"
+        android:layout_alignParentStart="true"
+        android:layout_centerVertical="true"
         android:layout_marginLeft="@dimen/view_margin_top"
-        android:layout_marginRight="@dimen/view_margin_top"
-        android:textColor="@color/white"
+        android:layout_marginRight="@dimen/title_margin_top"
+        android:paddingTop="@dimen/view_margin_top"
+        android:paddingBottom="@dimen/view_margin_top"
+        android:background="@mipmap/bg_level_adjustment"
         android:orientation="vertical">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/view_margin_top"
-            android:textColor="@color/white"
-            android:text="@string/leveler_detail_context1" />
+            android:text="@string/leveler_detail_context1"
+            android:textColor="@color/white" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/view_margin_top"
-            android:textColor="@color/white"
-            android:text="@string/leveler_detail_context2" />
+            android:text="@string/leveler_detail_context2"
+            android:textColor="@color/white" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/view_margin_top"
-            android:textColor="@color/white"
-            android:text="@string/leveler_detail_context3" />
+            android:text="@string/leveler_detail_context3"
+            android:textColor="@color/white" />
     </LinearLayout>
 
     <include
